# pyHLAMSA

./: .gitignore  404.html  HLAmsa.py  README.md  example.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yml
pyHLAMSA/: Genemsa.py  Readmsa.py  __init__.py
pyhlamsa/: __init__.py  command.py  gene.py  gene_family.py  msaio.py
pyhlamsa/gene/: __init__.py  allele_operation.py  base.py  block_operation.py  column_operation.py  genemsa.py  io_operation.py  text_operation.py  type_convertion.py
pyhlamsa/gene_family/: __init__.py  cyp.py  family.py  hla.py  hla_ex.py  kir.py
pyhlamsa/utils/: alignment.py  cigar.py  dat.py  text.py  vcf.py
search/: search_index.json
tests/: A_gen.msf  A_gen.txt  test_file_reading.py  test_msa_operation.py
