[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhlamsa"
version = "0.6.2"
description = "A simple utility to read IMGT HLA/KIR and pharmvar(CYP) data as MSA"
readme = "README.md"
dependencies = [
    "biopython",
    "pysam",
]
requires-python = ">=3.9"
# author = "linnil1"
# url = "https://github.com/linnil1/pyHLAMSA"
keywords = ["MSA", "HLA", "KIR", "CYP", "fasta", "vcf", "gff"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
pyhlamsa = "pyhlamsa.command:main"

[tool.setuptools]
packages = ["pyhlamsa"]

[[tool.mypy.overrides]]
module = "pysam"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "Bio.*"
ignore_missing_imports = true
